force-app/main/default/objects/Lead/fields/LAC_Shorthand__c.field-meta.xml
<CustomField>
    <fullName>LAC_Shorthand__c</fullName>
    <description>Stakeholder: CDS, BI, MKT, Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>Select the relevant Lead Attribution Combo. If it is not on the list use the field LAC ID instead</inlineHelpText>
    <label>LAC Shorthand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LAC_Shorthands</valueSetName>
    </valueSet>
</CustomField>