force-app/main/default/objects/Lead/fields/Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Lead_Medium__c</fullName>
    <description>Stakeholder: BI, MKT, CDS, Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>By which medium did the lead arrive? Controlled via LAC</inlineHelpText>
    <label>Lead Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>