force-app/main/default/objects/Lead/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1453</description>
    <inlineHelpText>Lead Attribution: https://wiki.orderbird.com/x/6JZ1AQ</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>