force-app/main/default/objects/Lead/fields/LegalCompanyName__c.field-meta.xml
<CustomField>
    <fullName>LegalCompanyName__c</fullName>
    <description>Stakeholders: Sales with Account Management</description>
    <inlineHelpText>What is the company&apos;s legal name for e.g. billing? It is usually in the „about us“/Impressum of websites . If there is an addition such as Gmbh / UG / LDT. / SAS / SL... it’s an operating company. It could however also be a non-incorporated company</inlineHelpText>
    <label>Legal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>