force-app/main/default/objects/Lead/fields/METROOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>METROOpportunityID__c</fullName>
    <description>Stakeholder: PaM (METRO)</description>
    <inlineHelpText>What is the internal ID of this opportunity in the HoReCa org? Set on creation / Org-to-Org-Sharing; or later updated by Leadmanagement</inlineHelpText>
    <label>METRO Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>