force-app/main/default/objects/Lead/fields/METROOppStatus__c.field-meta.xml
<CustomField>
    <fullName>METROOppStatus__c</fullName>
    <description>Stakeholder: PaM (METRO)</description>
    <inlineHelpText>What is the status of this opportunity in relation to the METRO agreement? Filled automatically!</inlineHelpText>
    <label>METRO Opp Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity To be accepted</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Opportunity Rejected</fullName>
            </value>
            <value>
                <fullName>Opportunity accepted / In Progress</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Opportunity Auto Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>