force-app/main/default/objects/Lead/fields/METROpolitain__c.field-meta.xml
<CustomField>
    <fullName>METROpolitain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>Is this lead part of the METROpolitain Project? Normally set on creation or by PaM</inlineHelpText>
    <label>METROpolitain</label>
    <type>Checkbox</type>
</CustomField>