force-app/main/default/objects/Lead/fields/NewVenue__c.field-meta.xml
<CustomField>
    <fullName>NewVenue__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Is this a lead for a newly opening venue, or an already existing one? To be filled in as soon as known</inlineHelpText>
    <label>New Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>