force-app/main/default/objects/Lead/fields/NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLocations__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Do more then one venue belong to this one (child or sibling location)? Filled in if known</inlineHelpText>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>