force-app/main/default/objects/Lead/fields/Nurturing__c.field-meta.xml
<CustomField>
    <fullName>Nurturing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: MKT &amp; Sales</description>
    <inlineHelpText>Should the Primary Contact for the opp after conversion receive nurturing mails? Check this box before conversion to get the info carried over top opp</inlineHelpText>
    <label>Nurturing</label>
    <type>Checkbox</type>
</CustomField>