force-app/main/default/objects/Lead/fields/Opening_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hours__c</fullName>
    <label>Opening Hours (free text)</label>
    <type>TextArea</type>
</CustomField>