force-app/main/default/objects/Lead/fields/OpeningDateGGP__c.field-meta.xml
<CustomField>
    <fullName>OpeningDateGGP__c</fullName>
    <description>Stakeholder: MKT (Gründerpreis)</description>
    <inlineHelpText>Part of the Gastro Founder award: When is the opening planned in relation to the Award Season? (Filled in by applicant through online form)</inlineHelpText>
    <label>Opening Date (GGP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>