force-app/main/default/objects/Lead/fields/OpeningDateNewVenue__c.field-meta.xml
<CustomField>
    <fullName>OpeningDateNewVenue__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>In case of a new venue: For when is the official opening of the venue planned? Filled in by Sales</inlineHelpText>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>