force-app/main/default/objects/Lead/fields/OperationalContact__c.field-meta.xml
<CustomField>
    <fullName>OperationalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/SAL-1113</description>
    <label>Operational Contact</label>
    <type>Checkbox</type>
</CustomField>