force-app/main/default/objects/Lead/fields/Opportunity_Category_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Category_Hidden__c</fullName>
    <description>CDS-1827</description>
    <label>Opportunity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
                <default>true</default>
                <label>New Business</label>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>MINI by orderbird</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>