force-app/main/default/objects/Lead/fields/Opportunity_type_hidden__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_type_hidden__c</fullName>
    <defaultValue>&apos;New Business&apos;</defaultValue>
    <description>CDS-1827</description>
    <label>Opportunity Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Category_Hidden__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
                <default>true</default>
                <label>New Business</label>
            </value>
            <value>
                <fullName>orderbird pay</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>POS Add on products</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
            <value>
                <fullName>MINI registration</fullName>
            </value>
            <value>
                <fullName>Guest Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>