force-app/main/default/objects/Lead/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Stakeholder: LM &amp; MKT</description>
    <inlineHelpText>What is the name of the funnel form or mass-upload? Set on creation</inlineHelpText>
    <label>Web2Lead Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>