force-app/main/default/objects/Lead/fields/OutdoorSeats__c.field-meta.xml
<CustomField>
    <fullName>OutdoorSeats__c</fullName>
    <inlineHelpText>What is the total number of seats in the outside area of the venue? Sales Reps have to fill in this information during sales talk.</inlineHelpText>
    <label># Outdoor Seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>&lt;10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>31-50</fullName>
            </value>
            <value>
                <fullName>51-75</fullName>
            </value>
            <value>
                <fullName>76-100</fullName>
            </value>
            <value>
                <fullName>101-150</fullName>
            </value>
            <value>
                <fullName>151-200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>