force-app/main/default/objects/Lead/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Is this account connected to other accounts (franchise, shared management, venue in venue)? Put the supervising/leading/primary account here.</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>