force-app/main/default/objects/Lead/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <description>Stakeholder: PaM // potential later use: the ID of the Partner who send us the lead; requires workflow to transfer this information into &quot;Partner Contact&quot;</description>
    <inlineHelpText>What is the ID of the Partner who send us this lead? Automatically looks up the contact and populates the according field here on the lead</inlineHelpText>
    <label>Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>