force-app/main/default/objects/Lead/fields/PartnerSource__c.field-meta.xml
<CustomField>
    <fullName>PartnerSource__c</fullName>
    <description>Stakeholder: PaM // only needed on Acc since asked during call</description>
    <inlineHelpText>NOT USED</inlineHelpText>
    <label>Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETL RS_2016</fullName>
            </value>
            <value>
                <fullName>Trade Show INTERGASTRA 2016 Stuttgart</fullName>
            </value>
            <value>
                <fullName>Trade Show INTERNORGA 2016 Hamburg</fullName>
            </value>
            <value>
                <fullName>Trade Show IGEHO 2015 Basel</fullName>
            </value>
            <value>
                <fullName>Field Agent Network ob</fullName>
            </value>
            <value>
                <fullName>Online Research</fullName>
            </value>
            <value>
                <fullName>pepperbill</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Airfy</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Other Partner</fullName>
            </value>
            <value>
                <fullName>Acquisition by orderbird Partner Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>