force-app/main/default/objects/Lead/fields/Pending_Autoconversion__c.field-meta.xml
<CustomField>
    <fullName>Pending_Autoconversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Autoconversion</label>
    <type>Checkbox</type>
</CustomField>