force-app/main/default/objects/Lead/fields/Pimpcore_ID__c.field-meta.xml
<CustomField>
    <fullName>Pimpcore_ID__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>What is the Lead ID within pimpcore?</inlineHelpText>
    <label>Pimpcore ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>