force-app/main/default/objects/Lead/fields/PreorderEmailed__c.field-meta.xml
<CustomField>
    <fullName>PreorderEmailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preorder Quote Emailed</label>
    <type>Checkbox</type>
</CustomField>