force-app/main/default/objects/Lead/fields/PreorderQuote__c.field-meta.xml
<CustomField>
    <fullName>PreorderQuote__c</fullName>
    <label>Preorder Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>