force-app/main/default/objects/Lead/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/SAL-1113</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>