force-app/main/default/objects/Lead/fields/PrimaryLanguageOld__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLanguageOld__c</fullName>
    <description>Stakeholder: Sales &amp; CS &amp; MKT</description>
    <inlineHelpText>What language do we use to communicate with this venue? Filled in as soon as known. Updated if necessary!</inlineHelpText>
    <label>Primary Language Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>