force-app/main/default/objects/Lead/fields/RecruitingCustomerId__c.field-meta.xml
<CustomField>
    <fullName>RecruitingCustomerId__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-281</description>
    <inlineHelpText>What is the idea of the customer who recruited this new lead?</inlineHelpText>
    <label>Recruiting Customer ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>