force-app/main/default/objects/Lead/fields/ReferralAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stand-in for Referral Contact until this one is fully implemented // Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>Who (Account) referred this lead to us? Filled in by leads or sales as soon as known, preferably on creation</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (as Ambassador)</relationshipLabel>
    <relationshipName>ReferredLeads</relationshipName>
    <type>Lookup</type>
</CustomField>