force-app/main/default/objects/Lead/fields/Registration_number__c.field-meta.xml
<CustomField>
    <fullName>Registration_number__c</fullName>
    <label>Registration number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>