force-app/main/default/objects/Lead/fields/RejectedReason__c.field-meta.xml
<CustomField>
    <fullName>RejectedReason__c</fullName>
    <inlineHelpText>Indicates the unqualified reason for a lead. Required if Lead Status = Unqualified</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already has a POS</fullName>
            </value>
            <value>
                <fullName>Apple only</fullName>
            </value>
            <value>
                <fullName>Closing down</fullName>
            </value>
            <value>
                <fullName>Bad/ incomplete contact details</fullName>
            </value>
            <value>
                <fullName>Foreign country / incompatible</fullName>
            </value>
            <value>
                <fullName>Lacking reliability</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Outside the industry / no fit</fullName>
            </value>
            <value>
                <fullName>Project cancelled</fullName>
            </value>
            <value>
                <fullName>Project delayed</fullName>
            </value>
            <value>
                <fullName>Technical requirements too high</fullName>
            </value>
            <value>
                <fullName>Too complicated</fullName>
            </value>
            <value>
                <fullName>unknown / other</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>