force-app/main/default/objects/Lead/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response Time (in sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>