force-app/main/default/objects/Lead/fields/Response_Time_disp__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_disp__c</fullName>
    <formula>if(isblank(Response_Time__c),&quot;&quot;,
if(Response_Time__c &gt;= 3600, TEXT(FLOOR(Response_Time__c / 3600)) &amp; &quot; Hour&quot; &amp; 
if(FLOOR(Response_Time__c / 3600) = 1, &quot;&quot;, &quot;s&quot;) 
&amp; &quot;, &quot;,&quot;&quot;) 
&amp; 
if(Response_Time__c &gt;= 60, TEXT(FLOOR(MOD(Response_Time__c, 3600) / 60)) &amp; &quot; Minute&quot;&amp; 
if(FLOOR(MOD(Response_Time__c, 3600) / 60) = 1, &quot;&quot;, &quot;s&quot;) 
&amp; &quot;, &quot;, &quot;&quot;) 
&amp; 
TEXT(MOD(Response_Time__c, 60)) &amp; &quot; Second&quot;&amp; 
if(MOD(Response_Time__c, 60) = 1, &quot;&quot;, &quot;s&quot;))</formula>
    <label>Response Time</label>
    <type>Text</type>
</CustomField>