force-app/main/default/objects/Lead/fields/Response_time_in_min__c.field-meta.xml
<CustomField>
    <fullName>Response_time_in_min__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1226</description>
    <formula>(First_Successful_Activity_Date__c -  CreatedDate) * 24 * 60</formula>
    <label>Response time (in min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>