force-app/main/default/objects/Lead/fields/Sales_Package__c.field-meta.xml
<CustomField>
    <fullName>Sales_Package__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3569</description>
    <inlineHelpText>Has this lead been promised a special package?</inlineHelpText>
    <label>Sales Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC Hellenic - Package Light</fullName>
            </value>
            <value>
                <fullName>CC Hellenic - Package Standard</fullName>
            </value>
            <value>
                <fullName>CC Hellenic - Package Lighthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>