force-app/main/default/objects/Lead/fields/SalesAgent__c.field-meta.xml
<CustomField>
    <fullName>SalesAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Which Salesagent is going to be responsible for this lead once it is converted? Set by LM or SDR</inlineHelpText>
    <label>Sales Agent</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e580000015470</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>