force-app/main/default/objects/Lead/fields/Send_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Send_Brochure__c</fullName>
    <label>Send Brochure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS Flyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>