force-app/main/default/objects/Lead/fields/Service_Concept__c.field-meta.xml
<CustomField>
    <fullName>Service_Concept__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>What kind of service does this venue operate by? This is the 1st part of the customer segmentation. Filled by Sales</inlineHelpText>
    <label>Service Concept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Quick Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>