force-app/main/default/objects/Lead/fields/shopifyDiscountCode__c.field-meta.xml
<CustomField>
    <fullName>shopifyDiscountCode__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-4813</description>
    <inlineHelpText>Unique Discount Code Used in the Sales Order created in Shopify</inlineHelpText>
    <label>Discount Code Shopify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>