force-app/main/default/objects/Lead/fields/shopifySalesOrderId__c.field-meta.xml
<CustomField>
    <fullName>shopifySalesOrderId__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-4592</description>
    <inlineHelpText>Id of the Sales Order created in Shopify</inlineHelpText>
    <label>Sales Order Id Shopify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>