force-app/main/default/objects/Lead/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <formula>IF( OR(LAC_ID__c = &quot;180&quot;,LAC_ID__c = &quot;181&quot;), &quot;MINI&quot;, &quot;PRO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Product</label>
    <type>Text</type>
</CustomField>